# ATTU_TestSystem

./: .clang-format  .clangtidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  azure-pipelines.yml  package-lock.json
ATTU_TestSystem_Backend/: CMakeLists.txt
ATTU_TestSystem_Backend/source/: Broadcast.cpp  Broadcast.h  Client.cpp  Client.h  ClientManager.h  OatppComponents.h  main.cpp
ATTU_TestSystem_Backend/source/dto/: ATTUConfigDTO.h  Altimeter.h  Packet.h  PortConfigDTO.h  PortDTO.h  TestMessageDTO.h  TestRequestDTO.h  TestResponseDTO.h
ATTU_TestSystem_Backend/source/service/: TestService.cpp  TestService.h  WebSocketService.h
ATTU_TestSystem_Embedded/: CMakeLists.txt
ATTU_TestSystem_Embedded/internal_tests/: CMakeLists.txt  test_main.cpp
ATTU_TestSystem_Embedded/internal_tests/unit_tests/: ASCII_Generator_Test.cpp  ASCII_ProtocolTest_Test.cpp  DataSender_Test.cpp  EIVAPacket_Deserializer_Test.cpp
ATTU_TestSystem_Embedded/source/: main.cpp
ATTU_TestSystem_Embedded/source/ATTU_Handler/: ATTU_Handler.h  ATTU_MK2_Handler.cpp  ATTU_MK2_Handler.h  DataReceiver.cpp  DataReceiver.h  DataSender.cpp  DataSender.h
ATTU_TestSystem_Embedded/source/ATTU_Tests/: ASCII_Protocol_Test.cpp  ASCII_Protocol_Test.h  TestController.cpp  TestController.h  VerificationLogic.h
ATTU_TestSystem_Embedded/source/DataDeserialization/: EIVAPacket_Deserializer.cpp  EIVAPacket_Deserializer.h  EivaLegacyPacket.h
ATTU_TestSystem_Embedded/source/DataTypes/: ATTU_Response.h  TaggedData.h  TestData.h
ATTU_TestSystem_Embedded/source/Generators/: ASCII_Generator.cpp  ASCII_Generator.h  TestDataGenerator.h
Test_Applications/: CMakeLists.txt
Test_Applications/Communication_Test/: CMakeLists.txt  Serial_App.cpp
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.module.scss  App.tsx  index.css  index.tsx  setupTests.ts
frontend/src/components/Modal/: Modal.module.scss  Modal.tsx
frontend/src/components/PDFGenerator/: pdfGenerator.module.scss  pdfGenerator.tsx
frontend/src/components/SideBar/: SideBar.module.scss  SideBar.tsx
frontend/src/hooks/: useAppWebSocket.ts  useTestListener.test.tsx  useTestListener.ts
frontend/src/model/: dataModels.ts
frontend/src/pages/Config/: Config.module.scss  index.tsx
frontend/src/pages/Config/PortConfig/: PortConfig.module.scss  index.tsx
frontend/src/pages/Config/Ports/: Ports.module.scss  index.tsx
frontend/src/pages/Home/: Home.module.scss  index.tsx
frontend/src/pages/Tests/: Tests.module.scss  index.tsx
frontend/src/pages/Tests/Logs/: Logs.module.scss  index.tsx
frontend/src/pages/Tests/Menu/: Menu.module.scss  index.tsx
frontend/src/pages/Tests/Queue/: Queue.module.scss  index.tsx
frontend/src/service/: testService.test.tsx  testService.ts
frontend/src/store/: store.ts
frontend/src/store/slices/: attuSlice.ts  testSlice.test.tsx  testSlice.ts
